--- a/src/base/_variables.less
+++ b/src/base/_variables.less
@@ -1,1 +1,9 @@
 @color-prime: #d35749;
+@color-secondary: #cb6d58;
+
+// SEARCH BAR
+
+@color-title: #a0a8b8;
+@color-bg: #eee;
+@color-btn1: #457db4;
+@color-btn2: #e6ac5b;
