--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -8,7 +8,15 @@ h2 {
 }
 
 .header {
-}
-.header__search {
-  background-image: url(/assets/students.jpeg);
+  &__search {
+    background: url("../assets/students.jpeg") no-repeat center;
+  }
+  &__links ul {
+    display: flex;
+    flex-direction: row;
+  }
+
+  &__links strong {
+    display: @display-none;
+  }
 }
