add font family

--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -1,3 +1,7 @@
+body > * {
+  font-family: "Poppins", sans-serif;
+}
+
 nav {
   background-color: @color-prime;
 }
@@ -17,10 +21,13 @@ h2 {
   &__search__form {
     width: 400px;
     background-color: @color-bg;
-    border-radius: 20px .align-center;
+    border-radius: 10px;
+    padding: 20px 10px;
+    .align-center;
   }
   button {
     width: 200px;
     .align-center;
+    display: @display-none;
   }
 }
