--- a/src/base/_mixin.less
+++ b/src/base/_mixin.less
@@ -8,3 +8,18 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.button-reset() {
+  outline: none;
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100%;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.text-bold20() {
+  font-weight: bold;
+  font-size: 20px;
+}
