--- a/src/base/_variables.less
+++ b/src/base/_variables.less
@@ -5,7 +5,7 @@
 // SEARCH BAR
 
 @color-title: #a0a8b8;
-@color-bg: #eee;
+@color-bg: rgba(255, 255, 255, 0.7);
 @color-btn1: #457db4;
 @color-btn2: #e6ac5b;
 @display-none: none;
