Add main styling

--- a/src/base/_variables.less
+++ b/src/base/_variables.less
@@ -6,8 +6,15 @@
 
 @color-title: #a0a8b8;
 @color-bg: rgba(255, 255, 255, 0.7);
+@color-card: #f3f3f0;
 @color-btn1: #457db4;
 @color-btn2: #e6ac5b;
 @display-none: none;
 
 @text-center: center;
+
+// CARD COLORS
+
+@color-c1: #e6ac5b;
+@color-c2: #98a4a5;
+@color-c3: #509dd8;
