--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -1,7 +1,3 @@
-body > * {
-  font-family: "Poppins", sans-serif;
-}
-
 nav {
   background-color: @color-prime;
 }
@@ -23,6 +19,7 @@ h5 {
     display: @display-none;
   }
   &__search {
+    height: 800px;
     background: url("../assets/students.jpeg") no-repeat center;
     .flex-center();
   }
