--- a/src/base/_mixin.less
+++ b/src/base/_mixin.less
@@ -9,6 +9,13 @@
   justify-content: center;
 }
 
+.btn-r () {
+  outline: none;
+  border: none;
+  padding: 10px 5px;
+  border-radius: 3px;
+}
+
 .button-reset() {
   outline: none;
   border: none;
@@ -22,4 +29,13 @@
 .text-bold20() {
   font-weight: bold;
   font-size: 20px;
+}
+
+.card-style {
+  width: 300px;
+  height: 350px;
+  background: @color-card;
+  padding: 20px;
+  margin-bottom: 30px;
+  border-radius: 10px;
 }
