--- a/src/style.less
+++ b/src/style.less
@@ -1,3 +1,7 @@
+body > * {
+  font-family: "Poppins", sans-serif;
+}
+
 @import "./base/_variables.less";
 @import "./base/_header.less";
 @import "./base/_main.less";
