Add footer styling

--- a/src/base/_mixin.less
+++ b/src/base/_mixin.less
@@ -9,6 +9,11 @@
   justify-content: center;
 }
 
+.btn() {
+  outline: @color-bg;
+  border: 1px solid @color-input;
+}
+
 .btn-r () {
   outline: none;
   border: none;
