--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -14,6 +14,9 @@ h5 {
   &__section {
     color: @color-Wtitle;
     padding: 30px 15px;
+    svg {
+      border-radius: 50%;
+    }
   }
   .section1 {
     background-color: @color-c1;
@@ -21,6 +24,10 @@ h5 {
       color: @color-c1;
       background-color: @color-Wtitle;
       .btn-r;
+    }
+    svg {
+      width: 100px;
+      height: 100px;
     }
   }
   .section2 {
