Added icons in footer

--- a/src/base/_footer.less
+++ b/src/base/_footer.less
@@ -1,31 +1,42 @@
 .footer {
+  padding-top: 40px;
   background-color: black;
   color: @color-Wtitle;
   &__media {
     border-top: 1px solid @color-Wtitle;
     border-bottom: 1px solid @color-Wtitle;
-
+    padding: 20px 0;
     div {
-      width: 350px;
+      width: 70%;
       .align-center;
-      span {
-        margin: 0 5px;
+      display: flex;
+      justify-content: space-around;
+    }
+    div {
+      padding: 10px 0;
+      p {
+        .align-center;
+        font-size: 35px;
+        border: 1px solid white;
+        border-radius: 50%;
+        padding: 0 15px;
       }
     }
   }
 
   &__form {
-    width: 185px;
+    width: 224px;
     .align-center;
-
+    padding: 20px 0;
     form {
       position: relative;
 
       input {
-        width: 130px;
+        vertical-align: auto;
         color: @color-Wtitle;
         .btn;
         background-color: black;
+        padding: 10px;
         &:placeholder {
           color: @color-Wtitle;
         }
@@ -37,23 +48,36 @@
         color: @color-Wtitle;
         outline: none;
         width: 50px;
+        position: absolute;
+        right: 0;
+        padding: 10px 10px 14px 10px;
+        margin-right: 1px;
       }
     }
   }
 
   &__contact {
-    width: 185px;
+    width: 40%;
     .align-center;
     text-align: center;
   }
   &__about {
-    width: 185px;
+    width: 40%;
     .align-center;
     text-align: center;
+    padding: 20px;
   }
   &__icons {
     .align-center;
+    padding: 25px 0 10px 0;
     text-align: center;
     background-color: @color-input;
+    h6 {
+      margin-top: 20px;
+      font-size: 14px;
+    }
+    div i {
+      padding: 0 7% 0 7%;
+    }
   }
 }
