--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -28,7 +28,7 @@ h2 {
 
   &__search {
     height: 800px;
-    background: url("../assets/students.jpeg") no-repeat center;
+    background: url("../assets/kitchen.jpeg") no-repeat center;
     .flex-center();
   }
   &__search__form {
