--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -14,20 +14,38 @@ h5 {
   &__section {
     color: @color-Wtitle;
     padding: 30px 15px;
+    display: flex;
+    align-items: center;
+
+    article {
+      width: 60%;
+      padding-left: 20px;
+      h6 {
+        font-size: 26px;
+        padding: 10px 0 20px 0;
+      }
+      p {
+        font-size: 16px;
+      }
+      button {
+        margin-top: 30px;
+      }
+    }
     svg {
       border-radius: 50%;
+      width: 30%;
+      margin: 15px;
     }
   }
   .section1 {
     background-color: @color-c1;
+
     button {
       color: @color-c1;
       background-color: @color-Wtitle;
       .btn-r;
     }
     svg {
-      width: 100px;
-      height: 100px;
       background-color: @color-c2;
     }
   }
