Add container transitio

--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -28,8 +28,11 @@ h2 {
 
   &__search {
     height: 800px;
-    background: url("../assets/kitchen.jpeg") no-repeat center;
-    .flex-center();
+    background: url("../assets/kitchen.jpg") no-repeat center;
+    .flex-center;
+    h3 {
+      text-shadow: 1px 1px black;
+    }
   }
   &__search__form {
     .text-bold20;
