--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -5,11 +5,19 @@ h5 {
 
 .main {
   margin-top: 30px;
+
   .align-center;
   &__article {
     .align-center;
     .card-style;
     text-align: center;
+    transition: 450ms;
+    transform-origin: center;
+    &:hover {
+      transform: scale(1.1);
+      border: 1px solid red;
+      box-shadow: 0px 0px 32px 8px #540b0e;
+    }
   }
   &__section {
     color: @color-Wtitle;
@@ -20,6 +28,7 @@ h5 {
     article {
       width: 60%;
       padding-left: 20px;
+
       h6 {
         font-size: 26px;
         padding: 10px 0 20px 0;
@@ -39,6 +48,7 @@ h5 {
   }
   .section1 {
     background-color: @color-c1;
+    margin-top: 60px;
 
     button {
       color: @color-c1;
@@ -68,4 +78,12 @@ h5 {
 
 svg {
   width: 100px;
+}
+
+.main__article:hover {
+}
+
+.main__article:hover ~ .main__article {
+  transform: translate3d(0, 20px, 0);
+  box-shadow: 0 0 0 7px rgba(192, 59, 59, 0.637);
 }
