--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -1,6 +1,8 @@
 h5 {
   text-align: center;
   color: @color-prime;
+  font-size: 24px;
+  padding: 40px 0;
 }
 
 .main {
@@ -12,11 +14,11 @@ h5 {
     .card-style;
     text-align: center;
     transition: 450ms;
-    transform-origin: center;
+    transform-origin: center top;
+
     &:hover {
       transform: scale(1.1);
-      border: 1px solid red;
-      box-shadow: 0px 0px 32px 8px #540b0e;
+      box-shadow: 14px 14px 5px -8px rgba(212, 212, 212, 1);
     }
   }
   &__section {
@@ -80,10 +82,6 @@ svg {
   width: 100px;
 }
 
-.main__article:hover {
-}
-
 .main__article:hover ~ .main__article {
   transform: translate3d(0, 20px, 0);
-  box-shadow: 0 0 0 7px rgba(192, 59, 59, 0.637);
 }
