Add responsive design

--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -3,10 +3,16 @@ h5 {
   color: @color-prime;
   font-size: 24px;
   padding: 40px 0 20px 0;
+  width: 100%;
 }
 
 .main {
   margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-flow: wrap;
+  transition: 450ms;
 
   .align-center;
   &__article {
