--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -1,3 +1,8 @@
+.main--container {
+  max-width: 1400px;
+  .align-center;
+}
+
 h5 {
   text-align: center;
   color: @color-prime;
@@ -9,6 +14,7 @@ h5 {
 .main {
   margin-top: 30px;
   display: flex;
+
   flex-direction: row;
   justify-content: space-around;
   flex-flow: wrap;
@@ -32,7 +38,8 @@ h5 {
     padding: 30px 15px;
     display: flex;
     align-items: center;
-
+    margin-left: 30px;
+    margin-right: 30px;
     article {
       width: 60%;
       padding-left: 20px;
