Add family portrain for header

--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -28,7 +28,7 @@ h2 {
 
   &__search {
     height: 400px;
-    background: url("../assets/kitchen.jpg") no-repeat center;
+    background: url("../assets/family.jpg") no-repeat center;
     .flex-center;
     h3 {
       text-shadow: 1px 1px black;
