--- a/src/base/_footer.less
+++ b/src/base/_footer.less
@@ -6,8 +6,13 @@
     border-top: 1px solid @color-Wtitle;
     border-bottom: 1px solid @color-Wtitle;
     padding: 20px 0;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: space-around;
+
     div {
-      width: 70%;
+      width: 380px;
       .align-center;
       display: flex;
       justify-content: space-around;
