--- a/src/base/_mixin.less
+++ b/src/base/_mixin.less
@@ -3,6 +3,11 @@
   margin-right: auto;
 }
 
+.align-reset() {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .flex-center() {
   display: flex;
   flex-direction: column;
