Add margin details main-container

--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -1,6 +1,7 @@
 .main--container {
   max-width: 1400px;
   .align-center;
+  overflow: hidden;
 }
 
 h5 {
@@ -14,7 +15,7 @@ h5 {
 .main {
   margin-top: 30px;
 
-  &__container {
+  &__box {
     .align-center;
     max-width: 850px;
     display: flex;
