--- a/src/base/_main-search.less
+++ b/src/base/_main-search.less
@@ -45,3 +45,11 @@ main {
     background-color: @color-prime;
   }
 }
+
+.carousel--container {
+  h4 {
+    padding: 40px 0;
+    font-size: 24px;
+    text-align: center;
+  }
+}
