Add property to pics

--- a/src/base/_main-search.less
+++ b/src/base/_main-search.less
@@ -1,6 +1,12 @@
-main {
-  max-width: 1400px;
+.main--container {
+  max-width: 1000px;
   .align-center;
+}
+
+main {
+  max-width: 800px;
+  .align-center;
+  padding: 40px 0;
 }
 
 .form--container {
@@ -48,8 +54,8 @@ main {
 
 .carousel--container {
   h4 {
-    padding: 40px 0;
-    font-size: 24px;
+    font-size: 40px;
     text-align: center;
+    padding: 20px 0 20px 0;
   }
 }
