Add style carousel text

--- a/src/base/_main-search.less
+++ b/src/base/_main-search.less
@@ -59,3 +59,13 @@ main {
     padding: 20px 0 20px 0;
   }
 }
+
+.carousel-caption {
+  text-shadow: 2px 2px 4px #000000;
+  h5 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 16px;
+  }
+}
