--- a/src/base/_main-search.less
+++ b/src/base/_main-search.less
@@ -7,6 +7,7 @@ main {
   max-width: 800px;
   .align-center;
   padding: 40px 0;
+  background: url("../assets/building.jpg") center;
 }
 
 .form--container {
@@ -53,10 +54,12 @@ main {
 }
 
 .carousel--container {
+  background-color: lightgrey;
   h4 {
     font-size: 40px;
     text-align: center;
     padding: 20px 0 20px 0;
+    font-weight: bold;
   }
 }
 
