--- a/src/base/_main-search.less
+++ b/src/base/_main-search.less
@@ -1,20 +1,24 @@
 .main--container {
-  max-width: 1000px;
+  max-width: 1024px;
   .align-center;
+  background: url("../assets/building3.jpg") center no-repeat;
+  background-attachment: fixed;
 }
 
 main {
-  max-width: 800px;
+  max-width: 1024px;
   .align-center;
   padding: 40px 0;
-  background: url("../assets/building.jpg") center;
+  backdrop-filter: blur(4px);
 }
 
 .form--container {
   margin-top: 30px;
   margin-bottom: 30px;
-  background-color: @color-c2;
-  max-width: 600px;
+  background-color: rgba(152, 164, 165, 0.25);
+  backdrop-filter: blur(2px);
+
+  max-width: 90%;
   .align-center;
   border-radius: 5px;
   h4 {
@@ -54,13 +58,23 @@ main {
 }
 
 .carousel--container {
-  background-color: lightgrey;
+  max-width: 800px;
+  .align-center;
+
   h4 {
+    color: white;
     font-size: 40px;
     text-align: center;
     padding: 20px 0 20px 0;
     font-weight: bold;
+    text-shadow: 2px 2px 2px @color-prime;
+    letter-spacing: 10px;
   }
+}
+
+.carousel {
+  border: 3px solid rgba(152, 164, 165, 0.6);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .carousel-caption {
@@ -70,5 +84,23 @@ main {
   }
   p {
     font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 0 20px;
+  }
+  label {
+    max-width: 200px;
+  }
+  button {
+    width: 10%;
+    height: 50px;
   }
 }
