--- a/src/style-search.less
+++ b/src/style-search.less
@@ -5,5 +5,5 @@ body > * {
 @import "./base/_variables.less";
 @import "./base/_header.less";
 @import "./base/_main-search.less";
-@import "./base/_footer.less";
+@import "./base/_footer-search.less";
 @import "./base/_mixin.less";
