--- a/src/base/_footer-search.less
+++ b/src/base/_footer-search.less
@@ -40,7 +40,8 @@
     form {
       position: relative;
 
-      input {
+      .input {
+        width: 222px;
         vertical-align: auto;
         color: @color-Wtitle;
         .btn;
@@ -50,17 +51,17 @@
           color: @color-Wtitle;
         }
       }
-      button {
+      .button {
         border: none;
-        padding: 4px 10px;
+        padding: 2px 8px;
         background-color: @color-input;
         color: @color-Wtitle;
         outline: none;
-        width: 50px;
+
         position: absolute;
         right: 0;
         padding: 10px 10px 14px 10px;
-        margin-right: 1px;
+        margin-right: 2px;
       }
     }
   }
