--- a/src/base/_footer-search.less
+++ b/src/base/_footer-search.less
@@ -47,6 +47,8 @@
         .btn;
         background-color: black;
         padding: 10px;
+        font-size: 15px;
+
         &:placeholder {
           color: @color-Wtitle;
         }
@@ -57,10 +59,9 @@
         background-color: @color-input;
         color: @color-Wtitle;
         outline: none;
-
         position: absolute;
         right: 0;
-        padding: 10px 10px 14px 10px;
+        padding: 10px 8px 10px 10px;
         margin-right: 2px;
       }
     }
@@ -93,6 +94,15 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .footer {
+    h3 {
+      font-size: 20px;
+    }
+    p {
+      font-size: 16px;
+    }
+  }
+
   .footer__media {
     align-items: center;
     div {
@@ -109,8 +119,18 @@
     }
   }
   .footer__container {
-    padding: 0 4%;
+    padding: 0 1%;
     display: flex;
     align-items: center;
+    font-size: 20px;
+  }
+  .input {
+    max-width: 450px;
+  }
+
+  .button {
+    height: 43px;
+    width: 70px;
+    margin-right: 0;
   }
 }
