--- a/src/base/_main-details.less
+++ b/src/base/_main-details.less
@@ -2,6 +2,7 @@
   max-width: 1024px;
   .align-center;
   margin: 30px 0;
+  overflow: hidden;
 }
 
 .info {
@@ -15,4 +16,10 @@
       color: @color-c3;
     }
   }
+}
+
+.map-frame {
+  width: 80%;
+  height: 300px;
+  margin: 10px auto;
 }
