Fixed centering map frame

--- a/src/base/_main-details.less
+++ b/src/base/_main-details.less
@@ -18,8 +18,13 @@
   }
 }
 
-.map-frame {
-  width: 80%;
-  height: 300px;
-  margin: 10px auto;
+.map {
+  display: flex;
+  justify-content: center;
+
+  &-frame {
+    max-width: 80%;
+    height: 500px;
+    margin: 10px auto;
+  }
 }
