Fix assets file

--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -2,6 +2,7 @@
   max-width: 1400px;
   .align-center;
   overflow: hidden;
+  background-color: rgba(199, 199, 199, 0.46);
 }
 
 h5 {
@@ -29,6 +30,7 @@ h5 {
 
   .align-center;
   &__article {
+    border: 2px solid lightgrey;
     .align-center;
     .card-style;
     text-align: center;
