--- a/src/base/_main-details.less
+++ b/src/base/_main-details.less
@@ -1,21 +1,24 @@
 .main--container {
-  max-width: 1024px;
+  max-width: 1400px;
   .align-center;
   overflow: hidden;
   padding: 0;
+  background-color: rgba(199, 199, 199, 0.46);
 }
 
 .main {
-  max-width: 1024px;
   .align-center;
   margin: 30px 0;
   overflow: hidden;
 }
 
 .info {
-  width: 85%;
-  padding: 35px;
+  width: 65%;
+  padding: 5%;
   .align-center;
+  border-radius: 5px;
+  border: 2px solid lightgrey;
+  background-color: rgba(152, 164, 165, 0.4);
 
   h4 {
     text-align: center;
@@ -25,7 +28,6 @@
   &__box {
     padding: 10px;
     .align-center;
-    background-color: rgba(152, 164, 165, 0.4);
     p {
       text-align: center;
       .span {
@@ -36,9 +38,10 @@
 }
 
 .gmap_canvas {
+  margin-top: 35px;
   overflow: hidden;
   background: none;
-  height: 500px;
   width: 600px;
+  border: 2px solid lightgrey;
   .align-center;
 }
