--- a/src/base/_main-search.less
+++ b/src/base/_main-search.less
@@ -32,6 +32,8 @@ main {
   padding: 30px 0;
   width: 80%;
   .align-center;
+  text-shadow: -1px 0px 1px @color-Wtitle;
+
   label {
     display: block;
     input {
