--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -9,7 +9,7 @@ h5 {
   text-align: center;
   color: @color-prime;
   font-size: 24px;
-  padding: 40px 0 20px 0;
+  margin: 30px 0;
   width: 100%;
 }
 
@@ -94,10 +94,6 @@ h5 {
   .section3 {
     background-color: @color-c3;
   }
-}
-
-h5 {
-  margin: 30px;
 }
 
 svg {
