Add Hover effect icons

--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -63,3 +63,17 @@ h2 {
     .align-center;
   }
 }
+
+.fas,
+.far {
+  cursor: pointer;
+  transition: 600ms;
+}
+
+.fas:hover,
+.far:hover {
+  transform: scale(1.1);
+  transition: 600ms;
+  font-size: 23px;
+  color: black;
+}
