--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -63,7 +63,7 @@ h5 {
         margin-top: 30px;
       }
     }
-    svg {
+    img {
       border-radius: 50%;
       width: 30%;
       margin: 15px;
@@ -78,7 +78,7 @@ h5 {
       background-color: @color-Wtitle;
       .btn-r;
     }
-    svg {
+    img {
       background-color: @color-c2;
     }
   }
@@ -96,7 +96,7 @@ h5 {
   }
 }
 
-svg {
+img {
   width: 100px;
 }
 
