--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -72,8 +72,13 @@ h2 {
 
 .fas:hover,
 .far:hover {
-  transform: scale(1.1);
+  transform: scale(1.3);
   transition: 600ms;
-  font-size: 23px;
+
   color: black;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
 }
