--- a/src/base/_header.less
+++ b/src/base/_header.less
@@ -46,6 +46,7 @@ h2 {
     .align-center;
     input {
       .button-reset;
+      padding-left: 20px;
     }
     button {
       .text-bold20;
@@ -81,4 +82,34 @@ h2 {
 a {
   text-decoration: none;
   cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) {
+  .header__nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30px;
+  }
+  .header__links {
+    padding: 0;
+  }
+  .form__btn {
+    position: relative;
+
+    button {
+      position: absolute;
+      right: 0;
+      width: 100px;
+      margin: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header__links {
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 30px;
+  }
 }
