--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -18,7 +18,7 @@ h5 {
 
   &__box {
     .align-center;
-    max-width: 450px;
+    max-width: 550px;
     display: flex;
 
     flex-direction: row;
@@ -102,4 +102,10 @@ img {
 
 .main__article:hover ~ .main__article {
   transform: translate3d(0, 20px, 0);
+}
+
+@media only screen and (min-width: 768px) {
+  .main__box {
+    max-width: 650px;
+  }
 }
