Add details page link

--- a/src/base/_main-details.less
+++ b/src/base/_main-details.less
@@ -53,6 +53,10 @@
     grid-template-rows: repeat(4, auto);
   }
 
+  .info__box span {
+    display: block;
+  }
+
   h4 {
     grid-column: 1 / span 2;
   }
