--- a/src/base/_main-search.less
+++ b/src/base/_main-search.less
@@ -102,6 +102,7 @@ main {
   max-width: 80%;
   .align-center;
   background: url("../assets/apartment.jpg") center;
+  cursor: pointer;
 }
 .pics__box {
   color: white;
