Fix Send button in footer, add document name and removed max-width

--- a/src/base/_footer.less
+++ b/src/base/_footer.less
@@ -59,8 +59,9 @@
         width: 50px;
         position: absolute;
         right: 0;
-        padding: 10px 10px 14px 10px;
-        margin-right: 1px;
+        padding: 10px 10px 13px 10px;
+        margin-right: 3px;
+        margin-top: 1px;
       }
     }
   }
@@ -111,5 +112,15 @@
     padding: 0 4%;
     display: flex;
     align-items: center;
+  }
+
+  .footer__form form button {
+    margin-right: 1px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .footer__form form button {
+    margin-right: 3px;
   }
 }
