--- a/src/base/_main.less
+++ b/src/base/_main.less
@@ -1,5 +1,5 @@
 .main--container {
-  max-width: 1400px;
+  // max-width: 1400px;
   .align-center;
   overflow: hidden;
   background-color: rgba(199, 199, 199, 0.46);
